# TTI-Bot

./: .env.sample  .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: flake8.yml
src/: bot.py  client.py  enums.py  schemas.py  settings.py  utils.py
